Login Register See Sharp

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 
 <div class="w-50 mx-auto">
     <h1 class="form-group">Welcome! Please register!</h1>
-    <a class="btn" style="background-color: rebeccapurple;" href="Login">Login if already signed up</a>
+    <a class="btn" style="background-color: rebeccapurple; color: white;" href="Login">Login if already signed up</a>
     <form asp-action="Register">
         <div class="form-group">
             <label asp-for="Email"></label>
