--- a/Views/Home/LoginPartial.cshtml
+++ b/Views/Home/LoginPartial.cshtml
@@ -1,11 +1,7 @@
-@{
-    ViewData["Title"] = "Login";
-}
 @model LoginUser
 
-<div class="w-50 mx-auto">
-    <a class="btn" style="background-color: rebeccapurple; color: white;" href="index">Register for an account</a>
-    <h1>Henlo! Please Login!</h1>
+<div class="w-30 mx-auto">
+    <h3 class="smallHead">Login</h3>
     <form asp-action="LoginUser" asp-controller="Home">
         <div class="form-group">
             <Label asp-for="LoginEmail">Email:</Label>
@@ -19,7 +15,7 @@
         </div>
         <div class="form-group">
             
-            <input class="btn btn-primary" type="submit" name="submit" id="submit">
+            <input style="background-color: rebeccapurple; color: white;" class="btn btn-primary" type="submit" name="submit" id="submit">
         </div>
     </form>
 </div>
