--- a/Views/Home/Success.cshtml
+++ b/Views/Home/Success.cshtml
@@ -1,1 +1,4 @@
-<h1>Success!</h1>
+<h1>Welcome, @ViewBag.User.FName!</h1>
+
+<a class="btn btn-lg" style="background-color: pink; color: white;" href="logout">Logout</a>
+
