--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,6 +1,9 @@
 ﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
 for details on configuring this project to bundle and minify static web assets. */
-
+*{
+  margin: 0px;
+  padding: 0px;
+}
 a.navbar-brand {
   white-space: normal;
   text-align: center;
@@ -68,4 +71,25 @@ body {
   width: 100%;
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
+}
+
+partial{
+  margin: 10px;
+}
+#bigHead{
+  color: #c712e3;
+  font-weight: 900;
+  text-shadow: 2px 2px black;
+  margin-bottom: 20px;
+  margin-top: 10px;
+}
+.smallHead{
+  color: #5e1af0;
+  font-weight: 900;
+  text-shadow: 1px 1px black;
+  margin-bottom: 10px;
+}
+label{
+  color:deeppink;
+
 }
